syntax = "proto3";
package jobworkerp.runner;

// http request runner settings
message HttpRequestRunnerSettings {
    string base_url = 1;
}
